replace the padding with a transparent border. this prevents the border shift from occurring.

--- a/sass/02_molecule/_m-form-item.scss
+++ b/sass/02_molecule/_m-form-item.scss
@@ -85,7 +85,7 @@
 			justify-content: space-around;
 			background: transparent;
 			color: inherit;
-			border: 0;
+			border: 3px solid transparent;
 
 			figure {
 				margin: 0;
@@ -127,8 +127,6 @@
 		input:checked + label {
 			background: transparent;
 			border: 3px solid $color__border-button-focus;
-			padding: 0.57em;
-
 			.support-tooltip {
 				bottom: 0.57em;
 				right: 0.57em;
